service-viewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-archiver-viewer
  labels:
    app: reddit-archiver-viewer
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: reddit-archiver-viewer
