httproute-viewer.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reddit-archiver
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway
  hostnames:
    - reddit-archive.sknt.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: reddit-archiver-viewer
          port: 80
